Fixed first section on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,9 +6,19 @@
   justify-content: space-between;
 }
 
+:root {
+  --accent-color: #9d632d;
+}
+
 a {
   color: currentColor;
   text-decoration: none;
+  transition: color 0.2s ease;
+}
+
+a:hover,
+a:focus {
+  color: var(--accent-color);
 }
 
 img {
@@ -190,21 +200,27 @@ p {
 }
 
 .section--text_only h1 {
-  font-size: 3rem;
-  font-weight: 300;
+  font-size: clamp(2rem, 5vw, 4rem);
+  font-weight: 200;
   text-wrap: balance;
   letter-spacing: -0.015em;
-  margin: auto auto 1ch;
+  margin: 2ch auto;
 }
 
-.section--text_only:first-of-type {
-  margin: 0 auto 50vh;
-  max-width: clamp(820px, 60vw, 980px);
-  border-radius: 8px;
-}
+@media screen and (min-width: 840px) {
+  .section--text_only:first-of-type {
+    margin: 0 auto 50vh;
+    max-width: clamp(820px, 60vw, 980px);
+    border-radius: 8px;
+  }
 
-.section--text_only:last-of-type .section__content {
-  padding-top: 10vw;
+  .section--text_only:last-of-type .section__content {
+    padding-top: 10vw;
+  }
+
+  .section--text_only h1 {
+    margin-top: 0;
+  }
 }
 
 .section--section_repeatable_content h2 {
@@ -266,7 +282,11 @@ p {
 }
 
 .testimonials__slider {
-  max-width: 70vw;
+  --swiper-theme-color: var(--accent-color);
+  --swiper-pagination-bullet-size: 16px;
+  --swiper-pagination-bullet-horizontal-gap: 6px;
+
+  max-width: 80vw;
 }
 
 .testimonials__slider img {
@@ -280,7 +300,7 @@ p {
 }
 
 .testimonials__slider blockquote p {
-  font-size: 1.5rem;
+  font-size: clamp(1rem, 5vw, 1.5rem);
   line-height: 1.6;
   font-style: italic;
 }
